--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -17,3 +17,5 @@ spring.datasource.hikari.maximum-pool-size= 15
 spring.datasource.hikari.connection-timeout= 60000
 
 management.endpoints.web.exposure.include=*
+
+application.theme.color=black
